# Magnet-Tape

./: CMakeLists.txt  README.md  input.txt  main.cpp  output.txt
lib/: FileTape.h  SortTape.h  TapeInterface.h  Util.h
src/: FileTape.cpp  SortTape.cpp  Util.cpp
tests/: tests.cpp
